# configor

./: .clang-format  .concepts  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README-zh.md  README.md  codecov.yml  jsonxx.sln  xmake.lua
.github/workflows/: build.yml  test.yml  unit_tests.yml
examples/: .gitignore  CMakeLists.txt  common.hpp  handler.h  json.hpp  jsonxx.sln  jsonxx.vcxproj  jsonxx.vcxproj.filters  jsonxx_example.vcxproj  jsonxx_example.vcxproj.filters  main.cpp  parser.hpp  serializer.hpp  user_info.cpp  user_info.h  value.hpp
include/configor/: configor.hpp  configor_basic.hpp  configor_conversion.hpp  configor_declare.hpp  configor_encoding.hpp  configor_exception.hpp  configor_iterator.hpp  configor_parser.hpp  configor_serializer.hpp  configor_stream.hpp  configor_token.hpp  configor_tokenization.hpp  configor_value.hpp  configor_wrapper.hpp  json.hpp  json5.hpp
include/configor/details/: conversion.hpp  declare.hpp  encoding.hpp  exception.hpp  iterator.hpp  parser.hpp  serializer.hpp  value.hpp  wrapper.hpp
include/configor2/: config.hpp  config_conversion.hpp  config_declare.hpp  config_encoding.hpp  config_exception.hpp  config_iterator.hpp  config_parser.hpp  config_serializer.hpp  config_stream.hpp  config_value.hpp  json.hpp  meta.hpp
include/jsonxx/: json.hpp  json_basic.hpp  json_config.hpp  json_conversion.hpp  json_declare.hpp  json_encoding.hpp  json_exception.hpp  json_iterator.hpp  json_parser.hpp  json_serializer.hpp  json_stream.hpp  json_unicode.hpp  json_utils.hpp  json_value.hpp
include/nomango/: json.hpp  json_basic.hpp  json_exception.hpp  json_iterator.hpp  json_parser.hpp  json_serializer.hpp  json_value.hpp
src/configor/: configor.hpp  configor_meta.hpp  configor_value.hpp  json.hpp
test/: .gitignore  CMakeLists.txt  jsonxx_test.sln  jsonxx_test.vcxproj  jsonxx_test.vcxproj.filters  main.cpp  test_basic_json.cpp  test_basic_json.h  test_main.cpp  test_parser.cpp  test_parser.h  test_serializer.cpp  test_serializer.h  test_utils.cpp  test_wchar.cpp
tests/: CMakeLists.txt  common.h  ctype.cpp  ctype.h  jsonxx_test.vcxproj  jsonxx_test.vcxproj.filters  main.cpp  test_basic_json.cpp  test_conversion.cpp  test_iterator.cpp  test_parser.cpp  test_serializer.cpp  test_unicode.cpp  test_utils.cpp  test_wchar.cpp
tests/common/: ctype.cpp  ctype.h
tests/common/include/: ctype.h  forward_include.h
tests/common/src/: ctype.cpp
tests/test_basic_config/: common.h  test_basic.cpp  test_conversion.cpp  test_iterator.cpp
tests/test_json/: common.h  ctype.h  test_parser.cpp  test_serializer.cpp  test_unicode.cpp
tests/test_json5/: common.h  test_parser.cpp  test_serializer.cpp  test_unicode.cpp
